<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:fontFamily="cursive"
        android:text="@string/welcome_to_tic_tac_toe"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:fontFamily="serif"
        android:paddingLeft="20sp"
        android:paddingTop="5sp"
        android:paddingRight="20sp"
        android:paddingBottom="5sp"
        android:text="@string/developed_by_rupam_ganguly"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="445dp"
        android:layout_marginTop="20sp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/grid" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="98dp"
                android:layout_height="113dp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:onClick="playerTap"
                android:tag="0" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="98dp"
                android:layout_height="113dp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:onClick="playerTap"
                android:tag="1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="98dp"
                android:layout_height="113dp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:onClick="playerTap"
                android:tag="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="98dp"
                android:layout_height="113dp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:onClick="playerTap"
                android:tag="3" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="98dp"
                android:layout_height="113dp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:onClick="playerTap"
                android:tag="4" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="98dp"
                android:layout_height="113dp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:onClick="playerTap"
                android:tag="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="98dp"
                android:layout_height="113dp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:onClick="playerTap"
                android:tag="6" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="98dp"
                android:layout_height="113dp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:onClick="playerTap"
                android:tag="7" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="98dp"
                android:layout_height="113dp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:onClick="playerTap"
                android:tag="8" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>